examples/test/testpolicy16611.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16611
  namespace: namespace272
spec:
  podSelector:
    matchLabels:
      key47: value48
      key22: value18
      key18: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value26
      podSelector:
        matchLabels:
          key35: value2
          key32: value37
